Fixes var-injector overflow scroll button issue

--- a/src/inject-style.css
+++ b/src/inject-style.css
@@ -23,6 +23,7 @@
 .var-injector {
   margin: 0;
   padding: 0;
+  padding-top: 2rem;
   font-family: Arial, Helvetica, sans-serif;
 
   position: fixed;
@@ -58,11 +59,13 @@
 }
 
 .var-injector .toggleButton {
-  background: transparent;
+  background: #33333d;
   width: 100%;
+  top: 0;
   display: block;
   border: 0;
   cursor: pointer;
+  position: fixed;
   transition: background 150ms ease-in;
 }
 .var-injector .toggleButton:hover {
